Fixed tooltips overlap and hide

--- a/donkey-gatsby/src/templates/auction.css
+++ b/donkey-gatsby/src/templates/auction.css
@@ -592,6 +592,8 @@ td.status.rejected {
 
 .auction_page .tooltip_con {
     position: relative;
+    padding: 0 0 15px 18px;
+    margin-bottom: -15px;
 }
 
 .auction_page .tooltip_content {
@@ -605,12 +607,13 @@ td.status.rejected {
     border-radius: 10px;
     opacity: 0;
     transition: all 0.3s ease-in-out;
-    z-index:10;
+    z-index:20;
 }
 
-.auction_page .tooltip_con:hover .tooltip_content {
+.auction_page .tooltip_con:hover .tooltip_content, .auction_page .tooltip_con .tooltip_content:hover {
     top: 33px;
     opacity: 1;
+    pointer-events: all;
 }
 
 .auction_page .tooltip_content:before {
